<resources>
    <string name="app_name">CHMNU</string>

    <!-- Fields -->
    <string name="activity_main_username">Username</string>
    <string name="activity_main_password">Password</string>

    <!-- Buttons -->
    <string name="log_in_btn">Log in</string>
    <string name="sign_in_btn">Sign in</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Menu items -->
    <string name="menu_home">University news</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_user_account">User account</string>
    <string name="menu_consultation">Consultations</string>
    <string name="menu_settings">Settings</string>

    <!-- Messages -->
    <string name="error_network">Oops.</string>
    <string name="error_network_subtitle">There seems to be a problem with your internet</string>
    <string name="try_to_login_with_192_168_0_1">Try to login with 192.168.0.1</string>

    <!-- Week days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="weekend">Weekend</string>

    <!-- Account information fields -->
    <string name="user_account_logout">Log out</string>
    <string name="user_account_name">Name</string>
    <string name="user_account_email">Email</string>
    <string name="user_account_department">Department</string>
    <string name="user_account_phone">Phone</string>
    <string name="user_account_posada">Position</string>

    <!-- Fragments -->
    <string name="fragment_reg_middle_name">Middle name</string>
    <string name="fragment_reg_first_name">First name</string>
    <string name="fragment_reg_lastname">Last Name</string>
    <string name="fragment_reg_sign_up">Sign up</string>
    <string name="fragment_reg_email">Email</string>

    <!-- Dialogs -->
    <string name="dialog_consultation_create_choose_room">Room</string>
    <string name="dialog_consultation_create_select_date_and_time">Select date and time</string>
    <string name="dialog_consultation_create_description">Description</string>

    <!-- Auxiliary strings -->
    <string name="consultation_activity_room">Room: </string>
    <string name="edit_consultation">Edit consultation</string>
    <string name="account_header">account_header</string>
    <string name="logo">Logo</string>
    <string name="univ_name">Petro Mohyla Black Sea National University</string>
    <string name="university_logo">university_logo</string>
    <string name="activity_login_loginTV">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="_192_168_0_1">192.168.0.1</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- SettingsActivity page -->
    <string name="general_header">General settings</string>
    <string name="theme_mode">Dark mode</string>
    <string name="lang_title">Choose language</string>
    <string name="info_header">Information</string>
    <string name="app_version">App version</string>

    <!-- Languages -->
    <string name="ukr">Ukrainian</string>
    <string name="eng">English</string>
    <string name="rus">Russian</string>

    <!-- Themes -->
    <string name="sys">System</string>
    <string name="lth">Light</string>
    <string name="drk">Dark</string>

    <!-- ConsultationActivity page -->
    <string name="activity_consultation_description">Description:</string>
    <string name="activity_consultation_subscribe">Subscribe</string>
    <string name="activity_consultation_unsubscribe">Unsubscribe</string>
    <string name="filter_panel">Filter panel</string>
    <string name="consultation_title">Consultation</string>
    <string name="filter">Filter</string>
    <string name="todo">TODO</string>
    <string name="search_teacher">Search teacher</string>
    <string name="date_title">Date:</string>
    <string name="time_title">Time:</string>
    <string name="empty_state_icon">Empty state icon</string>
    <string name="empty_state_text">Oooops! Nothing to show here</string>
    <string name="empty_state_description">Empty State</string>
    <string name="subscribe_on_consultation">Successful subscribe on consultation</string>
    <string name="unsubscrib_from_consultation">Successful unsubscribe from consultation</string>
    <string name="fail_username_OR_acc_is_NOTACTIVE">Fail username OR acc is NOT ACTIVE</string>
    <string name="check_your_internet_connection">Check your internet connection!</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="checking">Checking</string>
    <string name="сreate_сonsultation">Create consultation</string>
    <string name="create">Create</string>
    <string name="cancel">Сancel</string>
    <string name="select_professor">Select professor</string>
    <string name="select_room">Select room</string>
    <string name="select_group">Select group</string>
    <string name="select_сorrect_room">Select correct room</string>
    <string name="successful_created">Successful created</string>
    <string name="choose_correct_time">You need choose the correct time</string>
    <string name="delete_consultation">Delete consultation</string>
    <string name="delete">Delete</string>
    <string name="update_consultation">Update consultation</string>
    <string name="update">Update</string>
    <string name="successful_updated">Successful updated</string>
    <string name="consultation_all">All</string>
    <string name="consultation_my">My</string>
    <string name="consultation_subscribe">Subscribe</string>
    <string name="warning_delete_counter">This consultation will be deleted!</string>
    <string name="search_professor">Search professor</string>
    <string name="subject">Subject</string>
    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="position">Position</string>
    <string name="group">Group</string>
    <string name="subject_type">Subject type</string>
    <string name="students_sount_title" translatable="false">Записано студентів:</string>
    <string name="your_schedule">Your schedule</string>
    <string name="chip_adapter_professor">Professor:</string>
    <string name="chip_adapter_room">Room:</string>
    <string name="chip_adapter_group">Group:</string>
    <string name="successful_deleted">Successful deleted</string>
    <string name="filtration">Filtration</string>
    <string name="clear">Clear</string>
    <string name="hide_description">Hide description</string>
    <string name="close">Close</string>
    <string name="select_item" translatable="false">Select item</string>
    <string name="title_general_section">General</string>
    <string name="title_language">Language</string>
    <string-array name="language">
        <item>English</item>
        <item>Russian</item>
        <item>Ukrainian</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>ru</item>
        <item>uk</item>
    </string-array>
    <string name="default_language" translatable="false">en</string>
    <string name="title_theme">Theme</string>
    <string-array name="theme">
        <item>@string/sys</item>
        <item>@string/lth</item>
        <item>@string/drk</item>
    </string-array>
    <string-array name="theme_values">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="default_theme" translatable="false">system_theme</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

</resources>
