<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_general_section">

        <ListPreference
            android:defaultValue="@string/default_language"
            android:dialogTitle="@string/title_language"
            android:entries="@array/language"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_language"
            android:key="language"
            android:summary="%s"
            android:title="@string/title_language" />

        <ListPreference
            android:defaultValue="@string/default_theme"
            android:dialogTitle="@string/title_theme"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_theme"
            android:key="theme"
            android:summary="%s"
            android:title="@string/title_theme" />
    </PreferenceCategory>
</PreferenceScreen>