<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_menu_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_consultation"
            android:title="@string/menu_consultation" />
    </group>

    <group
        android:id="@+id/middle_menu_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_area"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_user_account" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/menu_admin"
            android:visible="false" />
    </group>

    <group
        android:id="@+id/bottom_menu_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>


</menu>
