<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#e3e3e3">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_username"
                android:inputType="text"
                android:drawableStart="@drawable/ic_person_black_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_black_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_main_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login_btn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:onClick="logIn"
            android:text="@string/log_in_btn" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_main_sign_in_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_btn"
        android:backgroundTint="#E2E2E2"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in_btn" />

</RelativeLayout>